--- a/TODO
+++ b/TODO
@@ -13,18 +13,20 @@ DONE
 - process secret before storing
 - create web endpoints for SAFE/HELP
 - create web endpoints for SAFE/HELP
-
-DOING
-- sort out data structures
-- refactor scripts to use general safe/help functions
 - generate secrets
+- sort out data structures
 - create local information class and fixture to populate
 
+DOING
+- refactor scripts to use general safe/help functions
 - admin interface for seeing people in trouble
 - different short codes for different countries
+- sort out help txt on form fields
+
 - create method for updating on progress
     - multiple updates per person. create web interface and 
       then ask Tom to duplicate with mobile
+
 - show short codes on website
 - script to perform actions for a person in trouble
     - forward details to relevant people
